# ETL-Microservices-System-Boilerplate

./: .env  .gitignore  Cargo.toml  Makefile  README.md  diesel.toml  docker-compose.yaml  rust-toolchain.toml
crates/__template__/: Cargo.toml
crates/action_job/: Cargo.toml
crates/action_job/src/: lib.rs
crates/example/: Cargo.toml
crates/example/src/: lib.rs  sink.rs  source.rs
crates/example2/: Cargo.toml
crates/example2/src/: lib.rs
database/: Cargo.toml
database/src/: interfaces.rs  lib.rs  query_interfaces.rs
database/src/__etl_job_status/: mod.rs  schemas.rs
database/src/assets/: mod.rs  schemas.rs
database/src/etl_job_status/: mod.rs  schemas.rs
database/src/tier_1/: mod.rs  schemas.rs
database/src/tier_2/: mod.rs  schemas.rs
database/src/tier_2/migrations/: example.sql
database/src/tier_3/: mod.rs  schemas.rs
etl-app/: Cargo.toml
etl-app/src/: main.rs  mq.rs  server.rs
etl-app/src/mq/: mod.rs  rabbitmq.rs
libs/common/: Cargo.toml
libs/common/src/: lib.rs  messages.rs  source_sink.rs
migrations/: .keep  tier_1.sql  tier_2.sql  tier_3.sql
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2024-08-25-103043_create_assets/: down.sql  up.sql
migrations/2024-08-25-103821_create_actions/: down.sql  up.sql
src/: schema.rs
