[workspace]

members = ["database", "etl-app", "crates/example", "crates/example2"]

[workspace.dependencies]
eyre = "0.6.12"
kanal = "0.1.0-pre8"
rayon = "1.10.0"
serde = { version = "1.0.207", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
tokio-retry = "0.3.0"
clap = { version = "4.5.15", features = ["env", "derive"] }
warp = "0.3.7"
log = "*"
env_logger = "*"

# Message Queue
google-cloud-pubsub = "0.28.1"

# Packages
database = { path = "database" }
example = { path = "crates/example" }
example2 = { path = "crates/example2" }
