[workspace]

members = [
    "database",
    "etl-app",
    "crates/example",
    "crates/example2",
    "libs/common",
]

[workspace.dependencies]
eyre = "0.6.12"
kanal = "0.1.0-pre8"
rayon = "1.10.0"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.2", features = ["full"] }
tokio-retry = "0.3.0"
clap = { version = "4.5.15", features = ["env", "derive"] }
chrono = { version = "0.4.38", features = ["now", "serde"] }
strum = { version = "0.26", features = ["derive"] }
erased-serde = "0.4"
amqprs = "1.7.0"
async-stream = "0.3.5"
futures-core = "0.3.30"
futures-util = "0.3.30"
warp = "0.3.7"
async-trait = "0.1.81"
log = "*"
env_logger = "*"

# Message Queue
google-cloud-pubsub = "0.28.1"

# Packages
database = { path = "database" }
example = { path = "crates/example" }
example2 = { path = "crates/example2" }
common = { path = "libs/common" }
