[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "chrono", "numeric"] }
chrono = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
futures-core = { workspace = true }
serde_json = { workspace = true }
kanal = { workspace = true }
log = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
eyre = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
rand = { workspace = true }


[features]
tier_1 = []
tier_2 = []
tier_3 = []
full = ["tier_1", "tier_2", "tier_3"]
