[package]
name = "etl-app"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = { workspace = true }
kanal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }
warp = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
async-trait = { workspace = true }

# Message Queue
google-cloud-pubsub = { workspace = true, optional = true }
amqprs = { workspace = true, optional = true }

# Libs
common = { workspace = true }
database = { workspace = true }

# ETL crate to include
example = { workspace = true, optional = true }
example2 = { workspace = true, optional = true }


[features]
# Etl libs
etl_example = ["example", "rabbitmq"]
etl_example2 = ["example2", "rabbitmq"]

# MQ selection
pubsub = ["google-cloud-pubsub"]
rabbitmq = ["amqprs"]

# Build selection
all = ["etl_example", "etl_example2"]
default = ["etl_example2"]
