[package]
name = "__template__"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
eyre = { workspace = true }
common = { workspace = true }
kanal = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
