[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { workspace = true, features = ["tier_1", "tier_2", "tier_3"] }
clap = { workspace = true }
eyre = { workspace = true }
common = { workspace = true }
kanal = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
