[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }
kanal = { workspace = true }
database = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
database = { workspace = true, features = ["full"] }
